--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,3 +5,6 @@ pydantic==2.3.0
 psycopg2-binary==2.9.7
 websockets==11.0.3
 python-dotenv==1.0.0
+pytest==7.4.0
+pytest-asyncio==0.21.1
+httpx==0.24.1
