--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,28 @@
-fastapi==0.103.1
-uvicorn==0.23.2
-sqlalchemy==2.0.20
-pydantic==2.3.0
-psycopg2-binary==2.9.7
-websockets==11.0.3
-python-dotenv==1.0.0
-pytest==7.4.0
-pytest-asyncio==0.21.1
-httpx==0.24.1
+annotated-types==0.7.0
+anyio==4.9.0
+certifi==2025.1.31
+click==8.1.8
+fastapi==0.115.12
+greenlet==3.1.1
+h11==0.14.0
+httpcore==1.0.8
+httpx==0.28.1
+idna==3.10
+iniconfig==2.1.0
+packaging==24.2
+pluggy==1.5.0
+psycopg2-binary==2.9.10
+pydantic==2.11.3
+pydantic_core==2.33.1
+pytest==8.3.5
+pytest-asyncio==0.26.0
+python-dotenv==1.1.0
+PyYAML==6.0.2
+sniffio==1.3.1
+SQLAlchemy==2.0.40
+starlette==0.46.1
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+uvicorn==0.34.0
+websockets==15.0.1
+wheel==0.45.1
